able to fix vertical stretch by changing parent row to container

--- a/Assets/style2.css
+++ b/Assets/style2.css
@@ -20,4 +20,5 @@ text-align: left;
   font-size: 48;
   color:#ffc107;  
   text-align: right;
+  padding-bottom: 40
   }
